--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<main role="main">
 			<div class="first step">
 				<h2>1. Choose a State</h2>
-				<select name="states" id="states">
+				<select name="names" id="states">
 					<option selected disabled value="empty-state">United States of America</option>
 					<option value="al">Alabama</option>
 					<option value="ak">Alaska</option>
@@ -78,6 +78,7 @@
 				<div id="postcard">
 					<p id="greeting">To Generate a Postcard</p>
 					<p id="state-heading">Choose a state</p>
+					
 				</div>
 			</div>
 		</main>
@@ -86,6 +87,6 @@
 <footer>
 	<p>Made in NY <br>Copyright © Postcard Generator</p>
 </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
