FINAL THING IM FREE

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<main role="main">
 			<div class="first step">
 				<h2>1. Choose a State</h2>
-				<select name="states" id="states" onchange="newState()">
+				<select name="states" id="states" >
 					<option selected disabled value="empty-state">United States of America</option>
 					<option value="al">Alabama</option>
 					<option value="ak">Alaska</option>
